Предупреждение про sun.misc.Unsafe: замерено, кодом не гасим — и вот почему (#75)
Пункт 1 задачи («предпочесть стратегию внедрения без Unsafe») закрыт замером,
но не тем выводом, к которому я шёл дважды.

Первый заход: «снять нельзя, все стратегии AgentBuilder.InjectionStrategy дают
одинаковые три строки». Неверный вывод из верного замера: стратегия тут ни при чём.
Печатает статический инициализатор, до которого доводит сам конструктор
new AgentBuilder.Default(): SelfInjection.Split → NexusAccessor →
ClassInjector.UsingReflection → ClassInjector.UsingUnsafe.<clinit>.

Второй заход: гасить свойством net.bytebuddy.safe=true из нашего кода. Строки
действительно пропадали — на трёх приложениях харнесса 4 против 0, тесты зелёные,
виды шагов совпали. Правка была написана, протестирована и ОТКАЧЕНА: слепое чтение
дифа показало цену, которой наш сьют не видит.

  java … pkg.Inject75                          → внедрение OK, 4 строки
  java -Dnet.bytebuddy.safe=true …             → 0 строк, ВНЕДРЕНИЕ ПРОВАЛ:
      UnsupportedOperationException «Cannot define class using reflection»
  java --sun-misc-unsafe-memory-access=allow … → 0 строк, внедрение OK

Свойство выключает ClassInjector.UsingReflection во ВСЕЙ JVM потребителя, и
диспетчер защёлкивается в static final при первой инициализации — вернуть его
по ходу прогона нельзя. Ломается ClassLoadingStrategy.Default.INJECTION, на которой
стоят обычный мок-мейкер Mockito и переписывание байткода Hibernate. Наш прогон
к этому слеп: src/test/resources/mockito-extensions подключает inline-мейкер,
который идёт через Instrumentation, а не через внедрение.

Ключ JVM даёт то же самое, ничего не отнимая, и принадлежит тому, кто владеет JVM.
Поэтому в README — строка про него, а не System.setProperty у нас.

Пункт 2 задачи («убедиться, что отвал будет громким») снят замером: прогон с
--sun-misc-unsafe-memory-access=deny зелёный, слой не отваливается. Формулировка
в матрице узкая намеренно: не «byte-buddy уходит другим путём» (она бросает